# skypro_coursework

./: .coverage  .env.sample  README.md  main.py  pyproject.toml
data/: OperationsTest.xlsx  operations.xlsx
src/: reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_reports.py  test_services.py  test_utils.py  test_views.py
